[build-system]
requires = ["flit_core >=3.11,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "homebrew_renpylib"
authors = [{name = "BrunoRNS", email = "brunorns05@outlook.com"}]
license = "MIT"
license-files = ["LICENSE"]
dynamic = ["version", "description"]

[project.urls]
Home = "https://github.com/BrunoRNS/homebrew-renpylib"

[tool.flit.sdist]
include = ["src/"]